+ add container management endpoints + add rswag for container management endpoints
